# code-optimization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: README.md
src/: CMakeLists.txt  main.cpp
src/tp-1/: CMakeLists.txt  README.md  main.cpp
src/tp-2/: CMakeLists.txt  README.md  main.cpp  morphology.cpp  vibe-background-sequential.cpp
